$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.631 2010/06/09 01:30:16 pdp Exp $

Change log file for Exim from version 4.21
-------------------------------------------

Exim version 4.73
-----------------

PP/01 Date: & Message-Id: revert to normally being appended to a message,
      only prepend for the Resent-* case.  Fixes regression introduced in
      Exim 4.70 by NM/22 for Bugzilla 607.

PP/02 Include check_rfc2047_length in configure.default because we're seeing
      increasing numbers of administrators be bitten by this.

JJ/01 Added DISABLE_DKIM and comment to src/EDITME

PP/03 Bugzilla 994: added openssl_options main configuration option.

PP/04 Bugzilla 995: provide better SSL diagnostics on failed reads.

PP/05 Bugzilla 834: provide a permit_coredump option for pipe transports.

PP/06 Adjust NTLM authentication to handle SASL Initial Response.

PP/07 If TLS negotiated an anonymous cipher, we could end up with SSL but
      without a peer certificate, leading to a segfault because of an
      assumption that peers always have certificates.  Be a little more
      paranoid.  Problem reported by Martin Tscholak.

PP/08 Bugzilla 926: switch ClamAV to use the new zINSTREAM API for content
      filtering; old API available if built with WITH_OLD_CLAMAV_STREAM=yes
      NB: ClamAV planning to remove STREAM in "middle of 2010".

PP/09 Implemented reverse_ip expansion operator.

PP/10 Bugzilla 937: provide a "debug" ACL control.

PP/11 Bugzilla 922: Documentation dusting, patch provided by John Horne.

PP/12 Bugzilla 973: Implement --version.

PP/13 Bugzilla 752: Refuse to build/run if Exim user is root/0.

PP/14 Build without WITH_CONTENT_SCAN. Path from Andreas Metzler.

PP/15 Bugzilla 816: support multiple condition rules on Routers.

PP/16 Add bool_lax{} expansion operator and use that for combining multiple
      condition rules, instead of bool{}.  Make both bool{} and bool_lax{}
      ignore trailing whitespace.


Exim version 4.72
-----------------
